# relay-chat

./: .gitignore  CMakeLists.txt  README.md
include/: AppController.h  BaseEntity.h  ChatWindow.h  ClientNetworkManager.h  CreateRoomDialog.h  DatabaseManager.h  IDataService.h  LocalDataService.h  LoginWindow.h  Message.h  RemoteDataService.h  Room.h  User.h
server/: CMakeLists.txt
server/include/: ClientNetworkManager.h  RequestHandler.h  Server.h  ServerDB.h
server/src/: RequestHandler.cpp  Server.cpp  ServerDB.cpp  main.cpp
src/: AppController.cpp  ChatWindow.cpp  ClientNetworkManager.cpp  CreateRoomDialog.cpp  DatabaseManager.cpp  LocalDataService.cpp  LoginWindow.cpp  Message.cpp  RemoteDataService.cpp  Room.cpp  User.cpp  main.cpp
